		- bascule différente entre l'affichage des temps (mode débug)
		- possibiliré de masquer les sprites, par type (par ex. les persos pour faire des captures)
	- ia :
		- utilité/cas devient préférence/catégorie
		- les préférences sont définies dans un fichier xml séparé
		- les préférences sont initialisées une seule fois pour un agent donné,
		  puis copiées à chacune de ses instantiations.
		- outil de vérification des agents plus complet : importations, commentaires, etc.
		- outil de génération de code source (vide) à partir d'un agent générique

+ beta.026
	- ressources : 
		- TODO nettoyage des thèmes (moins d'images à charger, mutualisation/normalisation des fichiers xml)
		- Thème du tournoi 2013/14
		- Pretty Bomberman de SBM3
		- Niveaux du tournoi 2013/14
		- Tournoi de qualification 2013/14
	- stats
		- Évolution des stats sur l'ensemble des joueurs, pour l'ensemble des manches et des types de stats
		- Enregistrement de l'historique des joueurs, pour chaque manche jouée
	- ia :
		- tous les anciens agents ont été débogués
		- possibilité de découper le code source de l'agent en deux projets (TBB vs. versions des agents)
		- correction d'un bug dans les anciens agents : ils affichaient certaines exceptions (malgré l'option du jeu)
		- ajout dans le checker de code source de l'API : ne pas utiliser printStackTrace
		- test lors du chargement de la table de préférences : combinaisons manquantes
	- options :
		- Possibilité d'enchainer les tournois automatiquement, avec sélection automatique des joueurs. 
		- Menu options modifié en conséquence (maintenant trois modes différents d'enchainement automatique)
 	- gui :
 		- Correction d'un bug empêchant l'affichage correct des noms des matches lors des coupes
 		- Correction d'un bug empêchant de changer un joueur quant il y en a déjà 16 (en raison d'un 
 		  blocage provoqué par le choix de la couleur) 
 		- Correction d'un bug lié à l'utilisation de F10 sous Win7
 		